src/App.scss
@font-face {
  font-family: 'Archia';
  src: url('fonts/Archia/archia-thin-webfont.eot');
  src:
    url('fonts/Archia/archia-thin-webfont.eot?#iefix') format('embedded-opentype'),
    url('fonts/Archia/archia-thin-webfont.woff2') format('woff2'),
    url('fonts/Archia/archia-thin-webfont.woff') format('woff'),
    url('fonts/Archia/archia-thin-webfont.ttf') format('truetype');
  font-weight: 100;
  font-style: normal;
}

@font-face {
  font-family: 'Archia';
  src: url('fonts/Archia/archia-light-webfont.eot');
  src:
    url('fonts/Archia/archia-light-webfont.eot?#iefix') format('embedded-opentype'),
    url('fonts/Archia/archia-light-webfont.woff2') format('woff2'),
    url('fonts/Archia/archia-light-webfont.woff') format('woff'),
    url('fonts/Archia/archia-light-webfont.ttf') format('truetype');
  font-weight: 200;
  font-style: normal;
}

@font-face {
  font-family: 'Archia';
  src: url('fonts/Archia/archia-regular-webfont.eot');
  src:
    url('fonts/Archia/archia-regular-webfont.eot?#iefix') format('embedded-opentype'),
    url('fonts/Archia/archia-regular-webfont.woff2') format('woff2'),
    url('fonts/Archia/archia-regular-webfont.woff') format('woff'),
    url('fonts/Archia/archia-regular-webfont.ttf') format('truetype');
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: 'Archia';
  src: url('fonts/Archia/archia-medium-webfont.eot');
  src:
    url('fonts/Archia/archia-medium-webfont.eot?#iefix') format('embedded-opentype'),
    url('fonts/Archia/archia-medium-webfont.woff2') format('woff2'),
    url('fonts/Archia/archia-medium-webfont.woff') format('woff'),
    url('fonts/Archia/archia-medium-webfont.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: 'Archia';
  src: url('fonts/Archia/archia-semibold-webfont.eot');
  src:
    url('fonts/Archia/archia-semibold-webfont.eot?#iefix') format('embedded-opentype'),
    url('fonts/Archia/archia-semibold-webfont.woff2') format('woff2'),
    url('fonts/Archia/archia-semibold-webfont.woff') format('woff'),
    url('fonts/Archia/archia-semibold-webfont.ttf') format('truetype');
  font-weight: 600;
  font-style: normal;
}

@font-face {
  font-family: 'Archia';
  src: url('fonts/Archia/archia-bold-webfont.eot');
  src:
    url('fonts/Archia/archia-bold-webfont.eot?#iefix') format('embedded-opentype'),
    url('fonts/Archia/archia-bold-webfont.woff2') format('woff2'),
    url('fonts/Archia/archia-bold-webfont.woff') format('woff'),
    url('fonts/Archia/archia-bold-webfont.ttf') format('truetype');
  font-weight: 900;
  font-style: normal;
}

/* Color Pallete */

$blue: #007bff;
$blue-light: #007bff10;
$blue-hover: #007bff30;
$blue-light-opaque: #eff7ff;
$blue-mid: #007bff99;
$pblue: #4c75f2;
$pblue-light: #4c75f210;
$pblue-hover: #4c75f230;
$pblue-light-opaque: #eff7ff;
$pblue-mid: #4c75f299;
$indigo: #6610f2;
$purple: #6f42c1;
$pink: #e83e8c;
$cherry: #ff073a;
$cherry-mid: #ff073a99;
$cherry-light: #ff073a20;
$cherry-hover: #ff073a30;
$cherry-light-opaque: #ffe0e6;
$red: #dc3545;
$red-light: #dc354520;
$red-mid: #dc354599;
$orange: #fd7e14;
$orange-mid: #fd7e1499;
$orange-light: #fd7e1420;
$orange-hover: #fd7e1430;
$orange-light-opaque: #ffefe2;
$yellow: #ffc107;
$yellow-light: #ffc10720;
$yellow-hover: #ffc10730;
$yellow-mid: #ffc10799;
$yellow-light-opaque: #fff7e0;
$green: #28a745;
$green-light: #28a74520;
$green-hover: #28a74530;
$green-mid: #28a74599;
$teal: #20c997;
$cyan: #17a2b8;
$white: #fff;
$gray: #6c757d;
$gray-light: #6c757d10;
$gray-light-opaque: #f6f6f7;
$gray-hover: #6c757d20;
$gray-mid: #6c757d99;
$gray-dark: #343a40;
$gray-opaque: #f1f1f1;
$primary: #007bff;
$secondary: #6c757d;
$success: #28a745;
$info: #17a2b8;
$warning: #ffc107;
$danger: #dc3545;
$light: #f8f9fa;
$dark: #343a40;
$purple: #201aa2dd;
$purple-light: #201aa220;
$purple-hover: #201aa230;
$purple-mid: #201aa299;
$purple-light-opaque: #e3e2f3;
$pink: #fb5581;
$pink-light: #ffa8cb10;
$pink-hover: #ffa8cb30;
$pink-mid: #ffa8cb99;

@mixin navbarReveal($color) {
  $animation-name: unique-id() !global;

  animation-name: $animation-name;
  animation-duration: 0.75s;
  animation-timing-function: ease-in-out;
  animation-fill-mode: both;

  @keyframes #{$animation-name} {

    0% {
      background: transparent;
    }

    100% {
      background: $color;
    }
  }
}

@mixin levelColor($color) {
  .is-#{$color} {

    h1 { color: $color; }

    h4,
    h5 { color: #{$color}-mid; }
  }
}

body {
  padding: 0;
  margin: 0;
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
}

h1 {
  font-family: 'archia';
  font-size: 24px !important;
  font-weight: 900;
  text-transform: uppercase;
}

h2 {
  font-family: 'archia';
  font-size: 18px !important;
  font-weight: 400;
  text-transform: uppercase;
}

h3 {
  font-family: 'archia';
  font-size: 14px !important;
  font-weight: 400;
  text-transform: uppercase;
}

h4 {
  font-family: 'archia';
  font-size: 13px !important;
  font-weight: 900;
  text-transform: uppercase;
}

h5 {
  font-family: 'archia';
  font-size: 12px !important;
  font-weight: 900;
  text-transform: uppercase;
}

h6 {
  font-family: 'archia';
  font-size: 11px !important;
  font-weight: 600;
  text-transform: uppercase;
}

.arrow-up {
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-bottom: 5px solid $gray-mid;
  margin-left: 0.25rem;
}

.arrow-down {
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 5px solid $gray-mid;
  margin-left: 0.25rem;
}

.Home {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  margin-left: 5rem;
  margin-right: 5rem;

  .home-left,
  .home-right {
    display: flex;
    flex-direction: column;
    width: 30rem;
  }

  .home-left {
    margin-right: 2.5rem;
    margin-left: 2.5rem;
  }

  .home-right {
    margin-left: 2.5rem;
    margin-right: 2.5rem;
  }
}
/* ... */

